3 seminar in process

--- a/seminar3/index.html
+++ b/seminar3/index.html
@@ -7,12 +7,17 @@
 
 </head>
 <body style="background-color: snow">
+    <header>
+        <img class = "banner" src="images/sea-waves.gif">
+
+    </header>
+
     <h1 style= "background-color: rgba(8,110,55,0.37)" >
         Temirlan Yerlanuly
     </h1>
     <h2>Best software engineer бұйырса</h2>
     <div class="imgtable">
-        <img src="photo_2023-09-13_16-30-12.jpg">
+        <img src="images/photo_2023-09-13_16-30-12.jpg">
 
     </div>
     <div>
