some style changes

--- a/seminar2/index.html
+++ b/seminar2/index.html
@@ -33,7 +33,14 @@
             background-color: #dcd8d8; /* hover:bg-blue-300 */
             color: #000000; /* hover:text-amber-400 */
         }
-
+        .container {
+            max-width: 1100px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+        }
         .imgtable{
             display: flex;
             justify-content: center;
@@ -42,11 +49,14 @@
     </style>
 </head>
 <body style="background-color: snow">
-    <h1 style= "background-color: rgba(8,110,55,0.37)" >
+<div class="container">
+    <h1 >
         Hello, I'm Temirlan Yerlanuly
     </h1>
     <h2>3rd year Automation and Control student at KBTU</h2>
     <h3 style="color: deeppink">I'm sorry for having military department in the same day with practice</h3>
+</div>
+<div class="container">
     <div class="imgtable">
         <img src="photo_2023-09-08_12-47-14.jpg">
 
@@ -85,7 +95,7 @@
                 <a href="myhobbies.html">My hobbies</a>
             </button>
     </div>
-
+</div>
 
 
 
