--- a/seminar3/index.html
+++ b/seminar3/index.html
@@ -6,37 +6,36 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body style="background-color: snow">
-    <header>
-        <img class = "banner" src="images/sea-waves.gif">
+<body class="bguldanaisbestgirl">
+    <!-- <div > -->
+        <div class="overlay"></div>
 
-    </header>
+        <nav class="navbar" >
+            <ul class="nav-list">
+                <li><a href="#about">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+                <li class="last-item"><a href="index.html">Dune</a></li>
 
-    <h1 style= "background-color: rgba(8,110,55,0.37)" >
-        Temirlan Yerlanuly
-    </h1>
-    <h2>Best software engineer бұйырса</h2>
-    <div class="imgtable">
-        <img src="images/photo_2023-09-13_16-30-12.jpg">
-
-    </div>
-    <div>
-        <a href="https://linkedin.com/in/jateq"> Linkedin link </a>
-        <a href="https://github.com/jateq"> Github link </a>
-    </div>
-
-    <div>
-        <p> Golang, Python, JS: React, Nextjs, Nodejs, C++
-        </p>
-        <i><font color = #7b68ee>Looking for SWE intern position (actually for any position)</font></i>
-
-    </div>
+            </ul>
+        </nav>
 
 
+            <div class="containerthatappears" >
+                <img src="images/dune-fmb69ce5ahreihhi.jpg" >
+                <div class="container" id="about">
+                    "Dune" is a very special book. It was written by Frank Herbert 
+                    and has fascinated people for a long time. The story takes place
+                    in a faraway future where people can travel between stars and where
+                    there are a lot of secrets and plots. "Dune" is loved for its 
+                    rich world, interesting characters, and important ideas about life.
+                    I was first introduced to the film, and being completely surprised
+                    by how huge the world was in the film with its own stories and lore,
+                    I decided to dive into the book.
 
-
-
-
+                </div>
+        <!-- <div class="container"></div> -->
+    <!-- </div> -->
 
 </body>
 </html>
