--- a/seminar3/index.html
+++ b/seminar3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About me</title>
+    <title>Dune</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
