movies, novel endpoints

--- a/seminar3/index.html
+++ b/seminar3/index.html
@@ -13,8 +13,8 @@
         <nav class="navbar" >
             <ul class="nav-list">
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Movies</a></li>
-                <li><a href="#">Books</a></li>
+                <li><a href="./movies.html">Movies</a></li>
+                <li><a href="novel.html">Novel</a></li>
                 <li><a href="./characters.html">Characters</a></li>
                 <li class="last-item"><a href="index.html">Dune</a></li>
 
