nav backdrop filter image

--- a/seminar5/index.html
+++ b/seminar5/index.html
@@ -7,5 +7,28 @@
 </head>
 <body>
 
+<nav class="navbar" >
+    <ul class="nav-list">
+
+            <li><a href="./index.html">apple</a></li>
+            <li><a href="./mac.html">Mac</a></li>
+            <li><a href="./ipad.html">iPad</a></li>
+            <li><a href="./iphone.html">iPhone</a></li>
+            <li><a href="./airpods.html">AirPods</a></li>
+            <li><a href="./tvandhome.html">TV & Home</a></li>
+            <li><a href="./entertainment.html">Entertainment</a></li>
+            <li><a href="./support.html">Support</a></li>
+            <li><a href="./wheretobuy.html">Where to buy</a></li>
+
+
+    </ul>
+</nav>
+
+<div class="iphones">
+    <img src="images/apple-iphone.png" alt="apple">
+</div>
+
+<div class="space"></div>
+
 </body>
 </html>
