--- a/seminar5/index.html
+++ b/seminar5/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
@@ -11,24 +12,65 @@
     <ul class="nav-list">
 
             <li><a href="./index.html">apple</a></li>
-            <li><a href="./mac.html">Mac</a></li>
-            <li><a href="./ipad.html">iPad</a></li>
-            <li><a href="./iphone.html">iPhone</a></li>
-            <li><a href="./airpods.html">AirPods</a></li>
-            <li><a href="./tvandhome.html">TV & Home</a></li>
-            <li><a href="./entertainment.html">Entertainment</a></li>
-            <li><a href="./support.html">Support</a></li>
-            <li><a href="./wheretobuy.html">Where to buy</a></li>
+            <li><a href="#mac">Mac</a></li>
+            <li><a href="#ipad">iPad</a></li>
+            <li><a href="#iphones">iPhone</a></li>
+            <li><a href="#airpods">AirPods</a></li>
+            <li><a href="#tv">TV & Home</a></li>
+            <li><a href="#imac">iMac</a></li>
+            <li><a href="#watch">Watch</a></li>
+            <li><a href="#buy">Where to buy</a></li>
 
 
     </ul>
 </nav>
 
-<div class="iphones">
+<div class="iphones" id="iphones">
     <img src="images/apple-iphone.png" alt="apple">
 </div>
 
+<div class="container" id="mac">
+    <img class="mac" src="images/shop-mac.png" alt="mac">
+</div>
+
+<div class="container-two">
+    <img id="ipad" src="images/shop-ipad.png" alt="ipad">
+    <img id="airpods" src="images/shop-airpods.png" alt="ipad">
+
+
+</div>
+
+<div class="container-two">
+    <img id="watch" src="images/shop-watch.png" alt="ipad">
+    <img id="tv" src="images/shop-tv.png" alt="ipad">
+</div>
+
+<div class="container" id="new">
+    <img class="imac" src="images/shop-imac.png" alt="mac">
+</div>
+
+<div class="container" id="imac">
+    <img class="imac" src="images/shop-imacc.png" alt="mac">
+</div>
+
+<p> Where to buy</p>
+
+
+<div class="container-two-buy" id="buy">
+    <img src="images/shop-buy1.png" alt="buy">
+    <img src="images/shop-buy1.png" alt="buy">
+
+</div>
+<hr>
+
+
 <div class="space"></div>
+<footer>
+
+    <p>Made by Temirlan Yerlanuly</p>
+    <p>&copy; 2023. Apple. All rights reserved. </p>
+</footer>
+
 
 </body>
 </html>
