--- a/seminar9/login.html
+++ b/seminar9/login.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connection Status</title>
+    <title>Login</title>
     <style>
         body {
             display: flex;
             justify-content: center;
+            flex-direction: column;
             align-items: center;
             height: 100vh;
             margin: 0;
@@ -18,18 +19,19 @@
             display: flex;
             flex-direction: column;
         }
-        button{
+        .button{
+            margin-left: 150px;
+            margin-top: 20px;
             padding: 5px 10px;
             background-color: #1d4b8f;
             color:white;
             border: solid 1px white;
             border-radius: 5px;
-            margin-top: 10px;
             transition: 0.4s;
             font-size: 15px;
 
         }
-        button:hover{
+        .button:hover{
             background-color: white;
             color: #1d4b8f;
             border: solid 1px #1d4b8f;
@@ -39,28 +41,16 @@
         }
         .message {
             text-align: center;
-            
+            margin-top: 80px ;
         }
-
-        .auth{
-            display: flex;
-            justify-content: center;
-            flex-direction: row;
-        }
-
     </style>
 </head>
 <body>
-<div class="message">
-    <?php include 'connect.php'; ?>
-    <div class="message">
-        <?php echo "Connected successfully"; ?>
-    </div>
-    <div class="auth">
-        <a href="./login.html"><button>Login</button></a>
-        <a href="./register.html"><button>Register</button></a>
-    </div>
-    <a href="./data.php"><button>What is in database</button></a>
-</div>
+<h1>Login</h1>
+<form action="login_process.php" method="post">
+    Username: <input type="text" name="username" required><br>
+    Password: <input type="password" name="password" required><br>
+    <input class="button" type="submit" value="Login">
+</form>
 </body>
 </html>
