task1 animation, finished

--- a/seminar11/task1/index.html
+++ b/seminar11/task1/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-<div id="loading-indicator">Loading...</div>
+<div id="loading-container">
+  <div id="loading-indicator"> &nbsp;</div>
+</div>
+<div id="text">Loading...</div>
 
 </body>
 </html>
